swimmers-guide/styles/styles.css
/* ... */
/* END FOOTER */

@media screen and (max-width: 900px) {
    nav, footer {
        flex-direction: column;
    }
    header img.logo {
        width: 100px;
    }
    footer {
        margin-top: 10px;
    }
    footer a {
        padding: 5px 0;
    }
    footer p {
        margin: 5px 0;
    }
    #hero, #home-grid {
        height: auto;
    }
    #hero-msg-block, #hero-msg {
        margin-top: 20px;
        font-size: small;
        grid-column: 1 / 4;
    }
    h3 {
        font-size: x-large;
    }
    #main-background, #strokes-background, #workouts-background {
        grid-column: 1 / 12;
    }
    /* home page */
    main.home-grid {
        grid-template-rows: auto auto auto auto auto auto auto auto auto auto;
    }
    .main-head-bar {
        grid-column: 3 / 9;
    }
    #main-paragraph-background, .main-paragraph {
        grid-column: 1 / 11;
        grid-row: 2 / 3;
        font-size: 15px;
    }
    #tired-img {
        grid-column: 2 / 10;
        grid-row: 3 / 4;
        margin: 0 0 20px 0;
        width: 90%;
    }
    #food-head-bar {
        grid-row: 4 / 5;
        margin-top: 0px;
    }
    #food-paragraph {
        grid-row: 5 / 6;
        grid-column: 2 / 10;
        margin: 20px 10px;
    }
    #shopping-background {
        grid-row: 6 / 8;
        grid-column: 1 / 11;
    }
    #shopping-head-bar {
        grid-row: 6 / 7;
        grid-column: 1 / 11;
    }
    #shopping-paragraph {
        grid-row: 7 / 8;
        grid-column: 1 / 11;
        margin: 10px 40px;
    }
    #me {
        grid-row: 8 / 9;
        grid-column: 2 / 10;
        justify-self: center;
        width: 100%;
    }
    .footnote {
        grid-row: 9 / 10;
        grid-column: 2 / 10;
        justify-self: center;
        font-size: smaller;
        margin: 20px 0;
    }
    /* end homepage */

    /* strokes */
    .strokes-grid {
        grid-template-rows: auto auto auto auto auto auto auto auto auto auto auto auto auto;
    }
    #strokes-background {
        grid-row: 2 / 13; 
    }
    #intro-paragraph {
        grid-column: 2 / 10;
        grid-row: 2 / 3;
        margin: 10px 0;
        font-size: 15px;
        text-align: center;
    }
    #TYM {
        grid-column: 2 / 10;
        grid-row: 3 / 4;
        width: 75%;
        margin: 0;
    }

    #BU-head-bar {
        grid-column: 2 / 10;
        grid-row: 4 / 5;
        margin-top: 20px;
    }
    #BU-paragraph {
        grid-column: 2 / 10;
        grid-row: 5 / 6;
        text-align: center;
        font-size: 15px;
        margin: 10px 0;
    }
    #BU {
        grid-column: 2 / 10;
        grid-row: 6 / 7;
        width: 75%;
        margin: 0;
    }

    #BR-head-bar {
        grid-column: 2 / 10;
        grid-row: 7 / 8;
        margin-top: 20px;
    }
    #BR-paragraph {
        grid-column: 2 / 10;
        grid-row: 8 / 9;
        text-align: center;
        font-size: 15px;
        margin: 10px 0;
    }
    #BR {
        grid-column: 2 / 10;
        grid-row: 9 / 10;
        width: 75%;
        margin: 0;
    }

    #BF-head-bar {
        grid-column: 2 / 10;
        grid-row: 10 / 11;
        margin-top: 20px;
    }
    #BF-paragraph {
        grid-column: 2 / 10;
        grid-row: 11 / 12;
        text-align: center;
        font-size: 15px;
        margin: 10px 0;
    }
    #BF {
        grid-column: 2 / 10;
        grid-row: 12 / 13;
        width: 75%;
        margin: 0 0 20px 0;
    }
    /* end strokes */

    /* workouts */
    .workouts-grid {

    }
    #first-head-bar {
        grid-column: 3 / 9;
        margin-top: 10px;
    }
    #workout1-paragraph {
        grid-column: 2 / 10;
        font-size: 15px;
    }
    #second-head-bar {
        grid-column: 2 / 10;
        margin-top: 10px;
    }
    #workout2-paragraph {
        grid-column: 2 / 10;
        font-size: 15px;
    }
    #third-head-bar {
        grid-column: 3 / 9;
        margin-top: 10px;
    }
    #workout3-paragraph {
        grid-column: 2 / 10;
        font-size: 15px;
    }
    #workout-img {
        width: 90%;
    }
}

